--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,19 +1,25 @@
 <!doctype html>
 <html>
-<head>
-    <title>Hello AngularJS</title>
-    <link href="css/angular-bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-[ng\:cloak], [ng-cloak], .ng-cloak {
-  display: none !important;
-}
-</style>
-</head>
+    <head>
+        <title>Hello AngularJS</title>
+        <style type="text/css">
+        [ng\:cloak], [ng-cloak], .ng-cloak {
+          display: none !important;
 
-<body ng-app="">
+        }
+        </style>
 
-<div class="container"></div>
-<script src="js/angular-bootstrap.js" type="text/javascript"></script>
-<script src="js/hello.js"></script>
-</body>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+        <script src="js/angular-bootstrap.js" type="text/javascript"></script>
+        <script src="js/angular.js" type="text/javascript"></script>
+        <script src="js/hello.js"></script>
+    </head>
+
+    <body ng-app="">
+
+        <div class="container"></div>
+
+        <div id="map">My map will go here</div>
+    </body>
 </html>
