--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="controller">
     <head>
         <title>Hello AngularJS</title>
         <style type="text/css">
@@ -10,14 +10,13 @@
         </style>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
         <script src="js/angular-bootstrap.js" type="text/javascript"></script>
-        <script src="js/angular.js" type="text/javascript"></script>
-        <script src="js/hello.js"></script>
+        <!--<script src="js/angular.js" type="text/javascript"></script>-->
+        <script src="js/functions.js"></script>
     </head>
 
-    <body ng-app="">
-
+    <body>
         <div class="container-fluid">
 
             <div class="row">
@@ -26,29 +25,18 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" ng-controller="leaderboard">
                 <div id="left-side-bar" class="col-md-3">
+
 
                     <table class="table">
                         <tr>
                             <th>Area</th>
                             <th>Score</th>
-                            <th>Calories Burnt</th>
                         </tr>
-                        <tr>
-                            <td>Bedminster</td>
-                            <td>3445</td>
-                            <td>112,322</td>
-                        </tr>
-                        <tr>
-                            <td>Clifton</td>
-                            <td>490</td>
-                            <td>23,555</td>
-                        </tr>
-                        <tr>
-                            <td>Yate</td>
-                            <td>23</td>
-                            <td>2,390</td>
+                        <tr ng-repeat="lp in leaderboard.leaderboard">
+                            <td>{{lp.name}}</td>
+                            <td>{{lp.score}}</td>
                         </tr>
                     </table>
 
