change name of application

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="controller">
     <head>
-        <title>Hello AngularJS</title>
+        <title>FitCity - Bristol</title>
         <style type="text/css">
         [ng\:cloak], [ng-cloak], .ng-cloak {
           display: none !important;
